manifest/objects/copadoQuality__Functional_Review__c.object
<CustomObject>
    <fields>
        <fullName>copadoQuality__Add_https_Prefix__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls automatic addition of HTTPS protocol to Target Review URL</description>
        <inlineHelpText>Select this checkbox to automatically add “https://” to the Target Review URL.
Disable, if you want to use a different protocol</inlineHelpText>
        <label>Add https Prefix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Automation_Status__c</fullName>
        <label>Automation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copadoQuality__Automation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copadoQuality__Config_JSON__c</fullName>
        <label>Config JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Description__c</fullName>
        <inlineHelpText>Provide an outline about e.g. which parts of your application it should focus on, or where to find further information. Include links to documentation and videos to enable your reviewers.</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specify the Epic to which this review might be related.</inlineHelpText>
        <label>Epic</label>
        <referenceTo>copado__Epic__c</referenceTo>
        <relationshipLabel>Functional Reviews</relationshipLabel>
        <relationshipName>Functional_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Execution_Status__c</fullName>
        <label>Execution Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copadoQuality__Execution_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copadoQuality__Extension_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extension Configuration</label>
        <referenceTo>copado__ExtensionConfiguration__c</referenceTo>
        <relationshipLabel>Functional Reviews</relationshipLabel>
        <relationshipName>Functional_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this to specify if the review is for a specific Feature.</inlineHelpText>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>Functional Reviews</relationshipLabel>
        <relationshipName>Functional_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copadoQuality__Session_Outcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copadoQuality__Planned_Date__c</fullName>
        <inlineHelpText>Optional: Date when the review should happen.</inlineHelpText>
        <label>Planned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Functional Reviews</relationshipLabel>
        <relationshipName>Functional_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Review_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If available, select the Environment where the review should take place. If provided and if there&apos;s an active org credential, Copado will aim to auto-log in users when starting a review.</inlineHelpText>
        <label>Review Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Functional Reviews</relationshipLabel>
        <relationshipName>Functional_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Review_Outcome__c</fullName>
        <inlineHelpText>Provide a summary of the review. Feel free to link to further tracking sources like Spreadsheets or quip documents. This can be partially auto-generated with comments from the individual reviews or with AI generated summaries.</inlineHelpText>
        <label>Review Summary</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Review_Target_URL__c</fullName>
        <label>Review Target URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoQuality__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Functional Reviews</relationshipLabel>
        <relationshipName>Functional_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Functional Review</label>
    <listViews>
        <fullName>copadoQuality__All</fullName>
        <columns>NAME</columns>
        <columns>copadoQuality__Planned_Date__c</columns>
        <columns>copadoQuality__Review_Environment__c</columns>
        <columns>copadoQuality__Epic__c</columns>
        <columns>copadoQuality__Feature__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Functional Review Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functional Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copadoQuality__Protocol_Control</fullName>
        <active>false</active>
        <errorConditionFormula>If( AND(Not(IsBlank(copadoQuality__Review_Target_URL__c)),LOWER(LEFT(copadoQuality__Review_Target_URL__c, 4))!= &apos;http&apos;), true,false )</errorConditionFormula>
        <errorMessage>Target url has to start with a protocol.(exp: https://)</errorMessage>
    </validationRules>
</CustomObject>